# code

backgroundSubstraction/: CMakeLists.txt  backstraction.cpp  camera.cpp  camera.h  main.cpp
backgroundSubstraction/back/: CMakeLists.txt  backstraction.cpp  backstraction.h  camera.cpp  camera.h  main.cpp
backgroundSubstraction/opencvTest/: CMakeLists.txt  chain.h  fgvibe.h  main.cpp  sample.cpp
backgroundSubstraction/opencvTest/libvibe/: CMakeLists.txt
backgroundSubstraction/opencvTest/libvibe/libvibe++/: ViBe.h
backgroundSubstraction/videoSurveilance/: CMakeLists.txt  blobDetectorPeople.cpp  blobDetectorPeople.h  blobTrackDraw.cpp  blobTrackDraw.h  countBlobTrack.cpp  countBlobTrack.h  fgvibe.h  globalSet.h  main.cpp
baseMath/: whitening.ipynb
cmake/t1/: CMakeLists.txt  main.c
cmake/t2/: CMakeLists.txt
counter2/: CMakeLists.txt  DS.cpp
counter2/VehicleDetection/: VehicleDetection.cpp  stdafx.h  targetver.h
counter2/cvBlob/: VehicleDetection.cpp  cvaux.cpp  cvblob.cpp  cvblob.h  cvcolor.cpp  cvcontour.cpp  cvlabel.cpp  cvtrack.cpp  dllmain.cpp  stdafx.h  targetver.h
cppLearn/leetcode/: Makefile  myapp
cppLearn/test/: a.out  const.cpp
customer/: customer.pro  mainwindow.ui
designpattern/factory/: CMakeCache.txt  CMakeLists.txt  Makefile  abstractfactory  abstractfactory.cpp  factorymethod  factorymethod.cpp  factorymethod.h  simplefactory  simplefactory.cpp  simplefactory.h
fddbevaluation/: Makefile  evaluate  evaluate.cpp  runEvaluate.sh  runplotRoc.sh
hogvisualise/: hogvisualise.cpp
klt/: example1  example1.c  example2  example3  example4  example5  klt.c  speed.txt
klt/opencvklt/: CMakeLists.txt
lab_v4l2_yuyv/: CMakeLists.txt  a.out  driver.c  driver.h  driver2.c  driverMain.cpp  driverPakage.cpp  driverPakage.h  main.cpp  v4l2grab.c  v4l2grab.h
leetcode/: CMakeCache.txt  CMakeLists.txt  addtwo.cpp  cmake_install.cmake
libvibe++/main/: ViBe_8UC1.cpp  ViBe_8UC3.cpp
meanshift/: CMakeLists.txt  cluster.cpp  cluster.h  main.cpp
mjpg-streamer/mjpg-streamer-experimental/: mjpg_streamer
mouse/: a.out  readmouse.cpp
mynav/: package.xml
mynav/src/: tfPublish.cpp
navigation/mynav/: CMakeLists.txt
neural-networks-and-deep-learning/mysrc/: mymain.py  mymain2.py  mymain3.py  mymnist_loader.py  mynetwork.py  mynetwork2.py  mynetwork3.py  net.txt  netb.txt  netw.txt  network2.txt  shownumber.py  test.py
neural-networks-and-deep-learning/src/: mnist_loader.py  mymain.py  network.py  network2.py  network3.py
opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  openCamera.cpp  opencamera  opencamera.cpp  saveCamera.cpp
opencv/adaboost/: CMakeLists.txt  boost.cpp  detect.cpp
opencv/camera/: CMakeLists.txt  openCamera.cpp  saveCamera.cpp
opencv/detectSquare/: CMakeLists.txt  binary.cpp  contour.cpp  integral.cpp  meandev.cpp  means.cpp  rgb.cpp  template.cpp
opencv/test/: CMakeLists.txt  main.cpp
opencv/tool/: CMakeLists.txt  crop.cpp  sample.cpp  showlabel.cpp  tensorflow.cpp
opencv/track/: .Multi.cpp.swp  CMakeLists.txt  Multi.cpp  circleTrack.1.cpp  circleTrack.cpp  meanShift.cpp  multiTrack.cpp  singleObject.cpp  singleObject1.cpp  singleTrack.cpp
opencv/viz3d/: CMakeLists.txt  main.cpp
optical-flow/: CMakeLists.txt  MotionDetect.cpp  blockMatch.cpp  blockMatch.h  main.cpp  opticalFlow.cpp  opticalFlow.h  readme.md  tool.cpp  tool.h  xtofAffine2D.cpp  xtofCalcPyrlk.cpp  xtofFindCorner.cpp
optical-flow/cppFromWindows/: MotionDetect.cpp  stdafx.cpp  xtofAffine2D.cpp  xtofAffine2D.h  xtofCalcPyrlk.cpp  xtofCalcPyrlk.h  xtofCameraCorrect.cpp  xtofCameraHeight.cpp  xtofFindCorner.cpp  xtofFindCorner.h  xtofglobal.h
optical-flow/driver/: CMakeLists.txt  driver.c  driver.h  driver2.c  driverMain.cpp  driverPakage.cpp  driverPakage.h  v4l2grab.c
optical-flow/klt/: CMakeLists.txt  main.cpp
primer/chapter_2/: CMakeCache.txt  CMakeLists.txt  Makefile  auto  auto.cpp  class  class.cpp  cmake_install.cmake  constexpr  constexpr.cpp  for  for.cpp
primer/dynamicmemory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  strblob  strblob.cpp  uniqueptr  uniqueptr.cpp
primer/genericAlgorithm/: iterator.cpp  (+2 more)
python/: test.py  torch.py
python/head/: CMakeLists.txt  forward.cpp  forward.py  head.pkl  main.cpp  push.sh  train.py  valify.py
qtface/: face.cpp  face.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtface.pro
reptile/: image.py  request.py  request1.py  spider.py  test.py
shell/: CMakeLists.txt  aflwCutTrain.cpp  aflwFace.py  cpfile.sh  gauss.cpp  readlist.cpp
shell/aflw/: CMakeLists.txt  aflwFace.cpp  gauss.cpp  readlist.cpp
sqlite/database/: CMakeLists.txt  database.cpp  database.h  main.cpp
sqlite/face/detect/: CMakeLists.txt  arcsoft_afd_samplecode.cpp  faceDetectVideo.cpp  releasenotes.txt
sqlite/face/detect/samplecode/: CMakeLists.txt  arcsoft_afd_samplecode.cpp
sqlite/faceRecognize/: CMakeLists.txt  face.cpp  face.h  faceDetect.h  faceDetectHong.cpp  faceDetectHong.h  faceRecognize.h  faceRecognizeHong.cpp  faceRecognizeHong.h  main.cpp
sqlite/faceRecognize/recognition/: releasenotes.txt
tinyxmltest/: CMakeLists.txt  Makefile  main.cpp  mainClass.cpp  xmltest.cpp
tpai/: .~lock.submission.csv#  adcsv.ipynb  appCategory.ipynb  appCategoryAnalysys.ipynb  appcategorycsv.ipynb  baseline1.ipynb  baseline1.py  baseline2.py  datamining.md  hyperopttest.py  lasttry.py  lasttry2.py  note.md  positioncsv.ipynb  preprocess.py  record.py  selectfeature.py  test.ipynb  testappcategory.ipynb  testposition.ipynb  train_model.m  traincsv.ipynb  try.ipynb  try.py  trymodel.py  tryshowcsv.ipynb  tryshowcsv.py  tryxgboost.py  usercsv.ipynb  userinstalledappcsv.ipynb  xgbfirtest.py  xgboost (copy).xlsx  xgboost.model  xgboost.xlsx  xgboost_baseline.xlsx  xgboost_positionID_connectionType.xlsx
workpiece/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  match  myapp  template.cpp
workpieceML/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  contour.cpp  contour.h  image.cpp  image.h  main.cpp  myapp  temp.cpp  temp.h  tools.cpp  tools.h
(+275 files in other folders)
