cmake_minimum_required(VERSION 2.8)
project(sqlite)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS -std=c++11)
# find_package(sqlite3)
# message(STATUS ${sqlite3_LIBS})
add_executable(sqlite main.cpp database.cpp)
target_link_libraries(sqlite sqlite3)